# ComplianceAgent

./: .dvcignore  .env.example  .gitignore  DAGSHUB_SYNC_GUIDE.md  Readme.md  SETUP_COMMANDS.sh  VERIFICATION_REPORT.md  config.yaml  docker-compose.yml  main.py  ouput_scrap_1.json  output_1.json  pyproject.toml  run_cor_pipeline.py  verify_imports_test.py
.dvc/: config
config/: Scrapper_config.yaml  document_processor_config.yaml
data/: .gitignore  .gitkeep  CBE_Law_No._194_of_2020__a57db178.pdf.dvc  CBE_Statute__2e84bc01.pdf.dvc  Executive_Regulations_of_the_CBE_Banking_Sector_and_Money_Law__f5225a18.pdf.dvc  Presidential_Decree_No._458_for_2018_adding_the_Deputy_Governor_for_banking_stability_to_the_National_Council_for_Payments__83e03efe.pdf.dvc  Presidential_Decree_No._584_for_2021_relating_to_the_formation_of_the_Coordination_Council__e2156fe2.pdf.dvc  Presidential_Decree_No._609_for_2019_relating_to_the_renewal_of_the_appointment_of_the_Governor_of_the_Central_Bank_of_Egypt__1e11e737.pdf.dvc  Presidential_Decree_No._677_for_2019_relating_to_the_appointment_of_the_Deputies_of_the_Governor_of_the_Central_Bank_of_Egypt__96138517.pdf.dvc  Presidential_Decree_No._678_for_2019_relating_to_the_formation_of_the_Board_of_Directors_of_the_Central_Bank_of_Egypt__adcf9db9.pdf.dvc  Presidential_Decree_No._89_for_2017_relating_to_the_formation_of_the_National_Council_for_Payments__6806e4b0.pdf.dvc  legal_vault.db.dvc  local_files.dvc  test__a5b48220.pdf.dvc  test__c740338a.pdf.dvc
src/: data_acquisition_and_storage_pipeline.py  main.py
src/Orchetrator/: Orchestrator.py  email_sender.py
src/Parsing_and_metadata_extractor/: local_download.dvc  parsing_and_metadata_extractor.py  test.ipynb  test.py
src/Scrapper/: ScrapperClient.py  __init__.py
src/UI/: app.js  index.html  styles.css
src/api/: app.py  compliance_vault.db  database.py  main.py  models.py  repository.py  repository_metadata_db.py  run_server.py  schemas.py
src/chatbot/: config.py  main.py  manage_data.py  state.py
src/corporate_processor/: config.py  corporate_pipeline.py  dvc.yaml  ocr_engine.py  pipeline_manager.py
src/document_processor/: __init__.py  chunk_id_generator.py  diff_engine.py  ocr_engine.py  ocr_test.py  pipeline_manager.py  semantic_hasher.py
src/inference/: README.md  __init__.py  compliance_prompt.jinja2  engine.py  inference_test.py  mapper.py  pipeline_integration_test.py  reranker.py  reranker_test.py  retriever.py  router.py
src/mapping/: dvc.yaml  orchestrator.py  vector_search.py
src/metadata_manager/: __init__.py  db.py  metadata_store.py  models.py  test.py
src/user_adjustments_apis/: __init__.py  task.md
src/utils/: reset_all.py
tests/: test_regex.py
tests/document_processor/: __init__.py  (+3 more)
(+66 files in other folders)
