[project]
name = "complianceagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "easyocr>=1.7.1",
    "opencv-python>=4.10.0.84",
    "pdf2image>=1.17.0",
    "arabic-reshaper>=3.0.1",
    "python-bidi>=0.6.9",
    "pypdf>=6.10.2",
    "mistralai>=2.4.5",
    "pydantic>=2.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "sqlmodel>=0.0.38",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langgraph>=1.2.6",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.7",
    "pytest>=8.0",
]
